# gha-python

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README_CRAIG_NOTES.md  README_HOW_I_SET_UP.md  README_HOW_SET_UP.md  TEST.md  TODO.md  docker-compose.yaml  main.py  pyproject.toml  scan_secrets.py
.github/templates/: docker_validate_build_scan_deploy.yaml  github_actions_changelog_commit.yaml  list_all_commits.yaml  semantic_release.yaml
.github/workflows/: ci.yaml  ci_template.yaml  github_actions_changelog_commit.yaml  semantic_release.yaml  uv_run_lint_tests_calc_matrix_security.yaml
src/calculator/: __init__.py  _version.py  calculator.py  secrets.py
tests/: test_calculator.py  test_calculator_2.py
