[project]
name = "gha-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
 "mypy>=1.16.1",
 "pytest>=8.4.1",
 "ruff>=0.12.3",
]

[dependency-groups]
dev = [
    "conventional-pre-commit>=4.2.0",
    "pre-commit>=4.2.0",
]
